// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DinoGame Snapshots > matches snapshot for game over state 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Press Ctrl+C to quit                                                                                  HI 00000 00090 │
│                                                                                                                      │
│                                                                                                                      │
│                            ▄▄▄▄▄▄▄▄                                                                                  │
│                           ██▀███████                                                                                 │
│                           ██████████                                                                                 │
│                           █████▀▀▀▀▀                                                                                 │
│                 ▄        ▄████▀▀▀▀                                                                                   │
│                 █▄    ▄▟██████▄▄                                                                                     │
│                 ███▄▄█████████ ▀                                                                                     │
│                 ▀████████████▀                                                                                       │
│                   ▀█████████▀                                                                                        │
│           ▄▄▄▄▄▄▄▄▄ ▀███▀██  ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄           │
│                      █▀   █                                                                                          │
│            ▄         ▀▀   ▀▀                                                          ▄▄                             │
│                                                                 █                                                    │
│                            ▀   ▀▀              ▀▀▀                                                  ▄▄▄              │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`DinoGame Snapshots > matches snapshot for game over with max width sprite text 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Press Ctrl+C to quit                                                                                  HI 00000 00090 │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│   ▄▄▄▄▄▄▄▄  ██▀███████  ██████████  █████▀▀▀▀▀  ▄ ▄████▀▀▀▀  █▄ ▄▟██████▄▄  ███▄▄█████████ ▀  ▀████████████▀         │
│ ▀█████████▀ ▄▄▄▄▄▄▄▄▄ ▀███▀██                                                                                        │
│ ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄ │
│ ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄ █▀ █  ▄ ▀▀ ▀▀ ▄▄ ▀▀▀▀ ▄ ▄▄▄ ▄▄▄ █ ██  ▀ ▀▀ ▀▀▀ ▄▄▄     │
│ ▄▄▄▄ ▄                                                                                                               │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`DinoGame Snapshots > matches snapshot for game over with stretched sprite text 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Press Ctrl+C to quit                                                                                  HI 00000 00090 │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│   ▄▄▄▄▄▄▄▄  ██▀███████  ██████████  █████▀▀▀▀▀  ▄ ▄████▀▀▀▀  █▄ ▄▟██████▄▄  ███▄▄█████████ ▀  ▀████████████▀         │
│ ▀█████████▀ ▄▄▄▄▄▄▄▄▄ ▀███▀██                                                                                        │
│ ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄ │
│ ▄▄▄▄▄▄▄▄▄▄▄ █▀ █  ▄ ▀▀ ▀▀ ▄▄ ▀▀▀▀ ▄ ▄▄▄  █  ▀ ▀▀ ▀▀▀ ▄▄▄                                                             │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`DinoGame Snapshots > matches snapshot for initial state 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Press Ctrl+C to quit                                                                                  HI 00000 00000 │
│                                                                                                                      │
│                                                                                                                      │
│                            ▄▄▄▄▄▄▄▄                                                                                  │
│                           ██▀███████                                                                                 │
│                           ██████████                                                                                 │
│                           █████▀▀▀▀▀                                                                                 │
│                 ▄        ▄████▀▀▀▀                                                                                   │
│                 █▄    ▄▟██████▄▄                Press Space to Play                                                  │
│                 ███▄▄█████████ ▀                                                                                     │
│                 ▀████████████▀                                                                                       │
│                   ▀█████████▀                                                                                        │
│           ▄▄▄▄▄▄▄▄▄ ▀███▀██  ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄           │
│                      █▀   █                                                                                          │
│                 ▄▄▄▄ ▀▀   ▀▀                                     ▀▀▀                           ▄                     │
│                                                                                                                      │
│           ▄▄▄▄          ▄▄                         ▀      ▄▄▄▄                  ▀▀                  ▀▀▀▀             │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`DinoGame Snapshots > matches snapshot while ducking 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Press Ctrl+C to quit                                                                                  HI 00000 00000 │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                ▗▖                                                                                                    │
│                ▐██▙▄▄▄▟████████▄▄▄█▀██████▄                                                                          │
│                 ▝▜█████████████████████████                                                                          │
│                   ▝▜██████████████████▀▀▀▀▀                                                                          │
│                     ▝▜██████████  ▀▀▀▀▀▀▀                                                                            │
│           ▄▄▄▄▄▄▄▄▄▄▖██▀▗▖▀▀▘▖█▄▗▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄           │
│                      █▄                                                                                              │
│                 ▄▄▄▄                                             ▀▀▀                           ▄                     │
│                                                                                                                      │
│           ▄▄▄▄          ▄▄                         ▀      ▄▄▄▄                  ▀▀                  ▀▀▀▀             │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`DinoGame Snapshots > matches snapshot while playing 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Press Ctrl+C to quit                                                                                  HI 00000 00015 │
│                                                                                                                      │
│                                                                                                                      │
│                            ▄▄▄▄▄▄▄▄                                                                                  │
│                           ██▀███████                                                                                 │
│                           ██████████                                                                                 │
│                           █████▀▀▀▀▀                                                                                 │
│                 ▄        ▄████▀▀▀▀                                                                                   │
│                 █▄    ▄▟██████▄▄                                                                                     │
│                 ███▄▄█████████ ▀                                                                                     │
│                 ▀████████████▀                                                                                       │
│                   ▀█████████▀                                                                                        │
│           ▄▄▄▄▄▄▄▄▄ ▀███▀██  ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄           │
│                      █▀   █                                                                                          │
│                      ▀▀   ▀▀ ▀                           ▄                ▄▄                                         │
│                                                                                                                      │
│              ▀      ▄▄▄▄                  ▀▀                  ▀▀▀▀                            ▄                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`DinoGame Snapshots > matches snapshot with debug cactus 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Press Ctrl+C to quit                                                                                  HI 00000 00001 │
│                                                                                                                      │
│                                                                                                                      │
│                            ▄▄▄▄▄▄▄▄                                                                                  │
│                           ██▀███████                                                                                 │
│                           ██████████                                                                                 │
│                           █████▀▀▀▀▀                                                                                 │
│                 ▄        ▄████▀▀▀▀                                                                                   │
│                 █▄    ▄▟██████▄▄                                                                        ▖            │
│                 ███▄▄█████████ ▀                                                                       ▐█            │
│                 ▀████████████▀                                                                         ▐█            │
│                   ▀█████████▀                                                                           ▜█           │
│           ▄▄▄▄▄▄▄▄▄ ▀███▀██  ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▖           │
│                      █▀   █                                                                                          │
│              ▄▄▄▄    ▀▀   ▀▀                                  ▀▀▀                           ▄                        │
│                                                                                                                      │
│           ▄          ▄▄                         ▀      ▄▄▄▄                  ▀▀                  ▀▀▀▀                │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`DinoGame Snapshots > matches snapshot with sprite score when height is large 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Press Ctrl+C to quit                                                                                                 │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│ [90m▗▄▄[39m [90m▄▄▖[39m [90m▗▄▄▄▄▄▄▄▖[39m [90m▄▄▄▄[39m [90m▄▄▄▄[39m [90m▄▄▄▄[39m [90m▄▄▄▄[39m [90m▄▄▄▄[39m ▄▄▄▄ ▄▄▄▄ ▄▄▄▄ ▄▄▄▄ ▄▄▄▄  [90m▐██[39m [90m██▌[39m [90m███[39m [90m▐█▘[39m [90m▐██[39m [90m▐█▘[39m [90m▐██[39m [90m▐█▘[39m [90m▐██[39m [90m▐█▘[39m [90m▐██[39m [90m▐█▘[39m │
│ [90m▐██[39m ▐█▘ ▐██ ▐█▘ ▐██ ▐█▘ ▐██ ▐█▘ ▐██ ▐█▘ ▐██  [90m▐██▄▄▄▄██▌[39m [90m███[39m [90m▐██[39m [90m▐██▌▐██[39m [90m▐██▌▐██[39m [90m▐██▌▐██[39m [90m▐██▌▐██[39m [90m▐██▌[39m ▐██ ▐██▌▐██     │
│ ▐██▌▐██ ▐██▌▐██ ▐██▌▐██ ▐██▌  [90m▐██▀▀▀▀██▌[39m [90m███[39m [90m▐██[39m [90m▐██▌▐██[39m [90m▐██▌▐██[39m [90m▐██▌▐██[39m [90m▐██▌▐██[39m [90m▐██▌[39m ▐██ ▐██▌▐██ ▐██▌▐██ ▐██▌▐██    │
│ ▐██▌▐██ ▐██▌  [90m▐██[39m [90m██▌[39m [90m███[39m [90m▐██▌[39m [90m▐█[39m [90m▐██▌[39m [90m▐█[39m [90m▐██▌[39m  Press Space to Play █▌ ▐█ ▐██▌ ▐█ ▐██▌ ▐█ ▐██▌ ▐█ ▐██▌ ▐█  [90m▝▀▀[39m [90m▀▀▘[39m   │
│ [90m▝▀▀▀▀▀▀▀▘[39m [90m▀▀▀▀[39m [90m▀▀▀▀[39m [90m▀▀▀▀[39m [90m▀▀▀▀[39m [90m▀▀▀▀[39m ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀ ▀▀▀▀          ▄▄▄▄▄▄▄▄  ██▀███████  ██████████  █████▀▀▀▀▀  ▄ │
│ ▄████▀▀▀▀  █▄ ▄▟██████▄▄  ███▄▄█████████ ▀  ▀████████████▀  ▀█████████▀ ▄▄▄▄▄▄▄▄▄ ▀███▀██                            │
│ ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄ │
│ ▄▄▄▄▄▄▄▄▄▄▄ █▀ █  ▄▄▄▄ ▀▀ ▀▀ ▀▀▀ ▄ ▄▄  ▄▄▄▄ ▄▄ ▀ ▄▄▄▄ ▀▀ ▀▀▀▀ ▄ ▀▀                                                   │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`DinoGame Snapshots > renders successfully in a very narrow terminal 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Press Ctrl+C to quit                                                                                  HI 00000 00000 │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                         ▄        ▄                                                   │
│                                                 Press Space to Play                                                  │
│                                                         ███▄▄█████                                                   │
│                                                         ▀█████████                                                   │
│                                                           ▀███████                                                   │
│                                                   ▄▄▄▄▄▄▄▄▄ ▀███▀█                                                   │
│                                                              █▀                                                      │
│                                                         ▄▄▄▄ ▀▀                                                      │
│                                                                                                                      │
│                                                   ▄▄▄▄          ▄▄                                                   │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
